--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -15,20 +15,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="New Text"
-            android:id="@+id/textView2" />
+            android:id="@+id/senderTextView"
+            android:layout_weight="3" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="New Text"
-            android:id="@+id/textView3" />
+            android:id="@+id/dateTextView"
+            android:layout_weight="3" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="New Text"
-            android:id="@+id/textView4" />
+            android:id="@+id/messageTextView"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </RelativeLayout>
